add command deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "discord-travel-bot",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "src/discord/index.ts",
   "scripts": {
