--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
+    "tesseract.js": "^6.0.1",
     "tsx": "^4.19.2"
   }
 }
