--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/linv24/discord-travel-bot#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.8",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
     "tsx": "^4.19.2"
